--- a/src/main/resources/assets/grinnersmobs/lang/en_us.json
+++ b/src/main/resources/assets/grinnersmobs/lang/en_us.json
@@ -1,5 +1,4 @@
 {
-  "item.grinnersmobs.puretitanvillager_spawn_egg": " Pure Titan Villager Spawn Egg",
-
-  "itemGroup.grinnermobstab": "Grinner's Mobs Tab"
+  "item.grinnersmobs.puretitanvillager_spawn_egg": "Pure Titan Villager Spawn Egg",
+  "entity.grinnersmobs.puretitanvillager": "Pure Titan"
 }
