--- a/src/main/resources/assets/grinnersmobs/lang/en_us.json
+++ b/src/main/resources/assets/grinnersmobs/lang/en_us.json
@@ -7,8 +7,8 @@
   "item.grinnersmobs.monsterflesh": "Monster Flesh",
   "item.grinnersmobs.monsterbone": "Monster Bone",
   "item.grinnersmobs.monsterleather": "Monster Leather",
-  "item.grinnersmobs.lightmonsterbone_helmet": "Light Monster Bone Helemet ",
-  "item.grinnersmobs.lightmonsterbone_chestplate": "Light Monster Bone Chestplate ",
-  "item.grinnersmobs.lightmonsterbone_leggings": "Light Monster Bone Leggings",
-  "item.grinnersmobs.lightmonsterbone_boots": "Light Monster Bone Boots"
+  "item.grinnersmobs.lightmonsterbonearmor_helmet": "Light Monster Bone Helmet ",
+  "item.grinnersmobs.lightmonsterbonearmor_chestplate": "Light Monster Bone Chestplate ",
+  "item.grinnersmobs.lightmonsterbonearmor_leggings": "Light Monster Bone Leggings",
+  "item.grinnersmobs.lightmonsterbonearmorw_boots": "Light Monster Bone Boots"
 }
