--- a/src/main/resources/assets/grinnersmobs/lang/en_us.json
+++ b/src/main/resources/assets/grinnersmobs/lang/en_us.json
@@ -1,12 +1,20 @@
 {
   "item.grinnersmobs.puretitanvillager_spawn_egg": "Pure Titan Villager Spawn Egg",
   "item.grinnersmobs.puretitanlanky_spawn_egg": "Pure Titan Lanky Spawn Egg",
+  "entity.grinnersmobs.deathspike_spawn_egg": "Death Spike Spawn Egg",
+
   "entity.grinnersmobs.puretitanvillager": "Pure Titan",
   "entity.grinnersmobs.puretitanlanky": "Pure Titan",
+  "entity.grinnersmobs.deathspike": "Death Spike",
+
+
   "itemGroup.grinnerstab": "Grinner's Mobs",
+
   "item.grinnersmobs.monsterflesh": "Monster Flesh",
   "item.grinnersmobs.monsterbone": "Monster Bone",
   "item.grinnersmobs.monsterleather": "Monster Leather",
+  "item.grinnersmobs.spikeprojectile": "Spike",
+
   "item.grinnersmobs.lightmonsterbonearmor_helmet": "Light Monster Bone Helmet ",
   "item.grinnersmobs.lightmonsterbonearmor_chestplate": "Light Monster Bone Chestplate ",
   "item.grinnersmobs.lightmonsterbonearmor_leggings": "Light Monster Bone Leggings",
