--- a/src/main/resources/assets/grinnersmobs/lang/en_us.json
+++ b/src/main/resources/assets/grinnersmobs/lang/en_us.json
@@ -2,15 +2,23 @@
   "item.grinnersmobs.puretitanvillager_spawn_egg": "Pure Titan Villager Spawn Egg",
   "item.grinnersmobs.puretitanlanky_spawn_egg": "Pure Titan Lanky Spawn Egg",
   "item.grinnersmobs.deathspike_spawn_egg": "Death Spike Spawn Egg",
+  "item.grinnersmobs.entlingoak_spawn_egg": "Entling Oak Spawn Egg",
+
 
   "entity.grinnersmobs.puretitanvillager": "Pure Titan",
   "entity.grinnersmobs.puretitanlanky": "Pure Titan",
   "entity.grinnersmobs.deathspike": "Death Spike",
+  "entity.grinnersmobs.entlingoak": "Entling",
+
 
   "item.grinnersmobs.monsterflesh": "Monster Flesh",
   "item.grinnersmobs.monsterbone": "Monster Bone",
   "item.grinnersmobs.monsterleather": "Monster Leather",
+  "item.grinnersmobs.monsterfurtuft": "Monster Fur Tuft",
+  "item.grinnersmobs.monsterfabric": "Monster Fabric",
   "item.grinnersmobs.spikeprojectile": "Spike",
+  "item.grinnersmobs.entlingcore": "Entling Core",
+
 
   "item.grinnersmobs.lightmonsterbonearmor_helmet": "Light Monster Bone Helmet ",
   "item.grinnersmobs.lightmonsterbonearmor_chestplate": "Light Monster Bone Chestplate ",
@@ -21,6 +29,11 @@
   "item.grinnersmobs.deathspikearmor_helmet": "Death Spike Mask",
   "item.grinnersmobs.deathspikearmor_chestplate": "Death Spike Chestplate",
   "item.grinnersmobs.deathspikearmor_leggings": "Death Spike Leg Wraps",
-  "item.grinnersmobs.deathspikearmor_boots": "Death Spike Boots"
+  "item.grinnersmobs.deathspikearmor_boots": "Death Spike Boots",
+
+  "item.grinnersmobs.entlingarmor_helmet": "Entling Helmet",
+  "item.grinnersmobs.entlingarmor_chestplate": "Entling Chestplate",
+  "item.grinnersmobs.entlingarmor_leggings": "Entling Leggings",
+  "item.grinnersmobs.entlingarmor_boots": "Entling Boots"
 
 }
