Added Dire Rats

--- a/src/main/resources/assets/grinnersmobs/lang/en_us.json
+++ b/src/main/resources/assets/grinnersmobs/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.grinnersmobs.entlingoak_spawn_egg": "Entling Oak Spawn Egg",
   "item.grinnersmobs.entoak_spawn_egg": "Ent Oak Spawn Egg",
   "item.grinnersmobs.childrat_spawn_egg": "Small Rat Spawn Egg",
+  "item.grinnersmobs.direrat_spawn_egg": "Dire Rat Spawn Egg",
 
   "entity.grinnersmobs.puretitanvillager": "Pure Titan",
   "entity.grinnersmobs.puretitanlanky": "Pure Titan",
@@ -12,7 +13,7 @@
   "entity.grinnersmobs.entlingoak": "Entling",
   "entity.grinnersmobs.entoak": "Ent",
   "entity.grinnersmobs.childrat": "Small Rat",
-
+  "entity.grinnersmobs.direrat": "Dire Rat",
 
   "item.grinnersmobs.monsterflesh": "Monster Flesh",
   "item.grinnersmobs.monsterbone": "Monster Bone",
